--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   permission_handler:
   get: ^4.6.6
   file_picker: ^5.2.6
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
